--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
     	<artifactId>scala-library</artifactId>
     	<version>2.11.7</version>
     </dependency>
+    <dependency>
+    	<groupId>org.json4s</groupId>
+    	<artifactId>json4s-native_2.11</artifactId>
+    	<version>3.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
