--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+﻿<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>csci.ryan-williams</groupId>
   <artifactId>masters</artifactId>
@@ -42,50 +42,59 @@
     	<artifactId>json4s-native_2.11</artifactId>
     	<version>3.3.0</version>
     </dependency>
+
+<dependency>
+	<groupId>org.apache.spark</groupId>
+	<artifactId>spark-core_2.11</artifactId>
+	<version>1.6.1</version>
+	<scope>system</scope>
+	<systemPath>${env.SPARK_HOME}/assembly/target/scala-2.11/spark-assembly-1.6.1-hadoop2.6.0.jar</systemPath>
+</dependency>
+
   </dependencies>
 
   <build>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
-    <!-- 
+      
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>compile</goal>
-              <goal>testCompile</goal>
-            </goals>
-            <configuration>
-              <args>
-                <arg>-make:transitive</arg>
-                <arg>-dependencyfile</arg>
-                <arg>${project.build.directory}/.scala_dependencies</arg>
-              </args>
-            </configuration>
-          </execution>
-        </executions>
+        <version>3.2.1</version>
+		<executions>
+			<execution>
+				<goals>
+					<goal>compile</goal>
+					<goal>testCompile</goal>
+				</goals>
+			</execution>
+		</executions>
+		<configuration>
+		</configuration>
       </plugin>
-      -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration>
-          <useFile>false</useFile>
-          <disableXmlReport>true</disableXmlReport>
-          <!-- If you have classpath issue like NoDefClassError,... -->
-          <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
-          <includes>
-            <include>**/*Test.*</include>
-            <include>**/*Suite.*</include>
-          </includes>
-        </configuration>
-      </plugin>
+
+<!--
+            <plugin> 
+            	<groupId>org.apache.maven.plugins</groupId> 
+			<artifactId>maven-assembly-plugin</artifactId> 					
+			<version>2.4</version>                
+			<configuration> <descriptorRefs>                        <descriptorRef>jar-with-dependencies</descriptorRef>                    </descriptorRefs> <archive> <manifest>                            
+                        </manifest>                    
+		</archive> 
+	</configuration> 	
+	<executions>  
+      	<execution> 
+			<phase>package</phase> 
+			<goals> 
+				<goal>single</goal>
+                  </goals> 
+		</execution> 
+	</executions>            
+</plugin>
+-->
+
     </plugins>
   </build>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 </project>
