--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
     <encoding>UTF-8</encoding>
-    <scala.version>2.11.7</scala.version>
-    <scala.compat.version>2.11.7</scala.compat.version>
+    <scala.version>2.10.6</scala.version>
+    <scala.compat.version>2.10.6</scala.compat.version>
   </properties>
 
   <dependencies>
@@ -35,25 +35,26 @@
     <dependency>
     	<groupId>org.scala-lang</groupId>
     	<artifactId>scala-library</artifactId>
-    	<version>2.11.7</version>
+    	<version>2.10.6</version>
     </dependency>
     <dependency>
     	<groupId>org.json4s</groupId>
-    	<artifactId>json4s-native_2.11</artifactId>
+    	<artifactId>json4s-native_2.10</artifactId>
     	<version>3.3.0</version>
     </dependency>
 
 <dependency>
 	<groupId>org.apache.spark</groupId>
-	<artifactId>spark-core_2.11</artifactId>
+	<artifactId>spark-core_2.10</artifactId>
 	<version>1.6.1</version>
 	<scope>system</scope>
-	<systemPath>${env.SPARK_HOME}/assembly/target/scala-2.11/spark-assembly-1.6.1-hadoop2.6.0.jar</systemPath>
+	<systemPath>${env.SPARK_HOME}/assembly/target/scala-2.10/spark-assembly-1.6.1-hadoop2.4.0.jar</systemPath>
 </dependency>
 
   </dependencies>
 
   <build>
+    <finalName>masters</finalName>
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
